# Solitaire-Solver

./: CMakeLists.txt  Card.cpp  Card.h  DrawPile.cpp  DrawPile.h  HelperFunctions.cpp  HelperFunctions.h  OrganizedStack.cpp  OrganizedStack.h  Pile.cpp  Pile.h  SolitaireClassInteractions.cpp  SolitaireClassInteractions.h  SolitaireGame.cpp  SolitaireGame.h  SolitaireGameLogic.cpp  SolitaireGameLogic.h  SolitaireGameState.cpp  SolitaireGameState.h  TestCases.cpp  TestCases.h  main.cpp
